forgot & reset password validations

--- a/views/users/change-password.ejs
+++ b/views/users/change-password.ejs
@@ -35,8 +35,14 @@
                 id="newPassword"
                 name="newPassword"
                 placeholder="Enter new password"
+                minlength="8"
+                pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]+$"
                 required
               />
+              <div class="invalid-feedback">
+                Password must be at least 8 characters and include a mix of
+                numbers, alphabets, and special characters.
+              </div>
             </div>
 
             <div class="form-group mb-3">
