--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -56,7 +56,7 @@
               required
             />
             <div class="invalid-feedback">
-              Must be at least 6 characters long
+              Username must be at least 6 characters long
             </div>
           </div>
           <div class="form-group mb-3">
