--- a/views/users/reset-password.ejs
+++ b/views/users/reset-password.ejs
@@ -21,8 +21,14 @@
                 name="password"
                 placeholder="Enter a new password"
                 autofocus
+                minlength="8"
+                pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]+$"
                 required
               />
+              <div class="invalid-feedback">
+                Password must be at least 8 characters and include a mix of
+                numbers, alphabets, and special characters.
+              </div>
             </div>
 
             <div class="form-group mb-3">
