--- a/views/users/change-password.ejs
+++ b/views/users/change-password.ejs
@@ -25,6 +25,9 @@
                 autofocus
                 required
               />
+              <div class="invalid-feedback">
+                Password must be your current password
+              </div>
             </div>
 
             <div class="form-group mb-3">
@@ -57,6 +60,7 @@
                 placeholder="Confirm new password"
                 required
               />
+              <div class="invalid-feedback">Passwords must match</div>
             </div>
             <div class="text-center">
               <button class="btn btn-success my-3 py-2">Update Password</button>
