--- a/views/users/reset-password.ejs
+++ b/views/users/reset-password.ejs
@@ -41,6 +41,7 @@
                 placeholder="Confirm Password"
                 required
               />
+              <div class="invalid-feedback">Passwords must match</div>
             </div>
             <div class="text-center">
               <button class="btn btn-success">Update Password</button>
