--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,82 @@
-<% layout('./layouts/boilerplate') %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BookThing Home Page</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/stylesheets/home.css" />
+  </head>
+  <body class="d-flex text-center">
+    <!-- Showcase Section begins -->
+    <section id="showcase" class="d-flex w-100 mx-auto flex-column">
+      <div class="content-wrap d-flex flex-column h-100 w-100 p-3">
+        <a href="/books"
+          ><button class="btn btn-browse fs-4 px-3">Browse Books</button></a
+        >
+        <div class="d-flex align-items-center justify-content-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 64 64"
+            id="book"
+            class="svg-icon"
+          >
+            <g data-name="Book-notebook">
+              <rect width="58" height="40" x="3" y="15" fill="#007579"></rect>
+              <path
+                fill="#ff6243"
+                d="M32,55a4,4,0,0,0-4-4H7V11H18V47h6A8,8,0,0,1,32,55Z"
+              ></path>
+              <path
+                fill="#ffa733"
+                d="M57,11V51H36a4,4,0,0,0-4,4V15a4,4,0,0,1,4-4Z"
+              ></path>
+              <path
+                fill="#ffdaaa"
+                d="M32,15V55a8,8,0,0,0-8-8H18V7h6A8,8,0,0,1,32,15Z"
+              ></path>
+              <polygon
+                fill="#006df0"
+                points="17 51 17 59 14 56 11 59 11 51 17 51"
+              ></polygon>
+              <rect width="6" height="8" x="47" y="51" fill="#46f8ff"></rect>
+              <polygon
+                fill="#ffda44"
+                points="53 11 53 26 48 22 43 26 43 11 53 11"
+              ></polygon>
+              <rect width="6" height="1" x="47" y="51" fill="#00d7df"></rect>
+              <rect width="6" height="1" x="11" y="51" fill="#005ece"></rect>
+            </g>
+          </svg>
+          <h1>BookThing</h1>
+        </div>
+
+        <p><b>READ THE NEXT BEST THING!</b></p>
+        <div class="user-buttons d-flex justify-content-center">
+          <a href="/register"><button class="btn btn-left">sign up</button></a>
+          <a href="/login"><button class="btn btn-right">sign in</button></a>
+        </div>
+      </div>
+    </section>
+    <!-- Showcase Section ends -->
+
+    <!--  <%- include('./partials/footer') %> -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
